# cells_automaton

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  character.c  character.h  main.c
